# swagger.yaml
@@ -1,40 +1,42 @@
-swagger: '2.0'
+openapi: '3.0.0'
 info:
-  title: Sample API
-  description: Optional multiline or single-line description in x
-  version: '0.1.9'
-schemes: ['http']
-host: 0.0.0.0:8080
+  title: Aufgabe Lager
+  version: 0.1.1
+servers:
+  - url: http://0.0.0.0:8080
 paths:
   /purchase:
     post:
       summary: add a new purchase
-      consumes:
-        - application/json
-      parameters:
-        - in: body
-          name: purchase
-          description: the purchase to add
-          schema: 
-            $ref: '#/definitions/Purchase'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              $ref: '#/components/schemas/Purchase'
       responses:
         200:
           description: OK
   /purchases:
     get:
       summary: Returns a list of purchases.
-      produces:
-        - application/json
       responses:
         '200':    # status code
           description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Purchase'
   /purchasesForArticle:
     get:
       summary: Returns a list of the purchases that bought article with given articleID
       parameters:
         - in: query
           name: x
-          type: integer
+          schema:
+            type: integer
           description: the articleID for which any purchase buying that article will be returned
       responses:
         '200':
@@ -45,7 +47,8 @@ paths:
       parameters:
         - in: query
           name: x
-          type: string
+          schema:
+            type: string
           description: the search word
       responses:
         '200':
@@ -56,27 +59,49 @@ paths:
       parameters:
         - in: query
           name: x
-          type: string
-          format: date
+          schema:
+            type: string
+            format: date
         - in: query
           name: y
-          type: string
-          format: date
+          schema:
+            type: string
+            format: date
       responses:
         '200':
           description: OK
-definitions:
-  Purchase:
-    type: object
-    required:
-      - lieferant
-      - articleID
-      - menge
-    properties:
-      lieferant:
-        type: string
-      articleID: 
-        type: integer
-      menge:
-        type: integer
-  
+  /plot:
+    get:
+      summary: returns a plot of price of article by time
+      parameters:
+        - in: query
+          name: x
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: OK
+          content:
+            image/png:
+              schema:
+                type: string
+                format: binary
+components:
+  schemas:
+    Purchase:
+      type: object
+      required:
+        - lieferant
+        - articleID
+        - menge
+        - preis
+      properties:
+        lieferant:
+          type: string
+        articleID: 
+          type: integer
+        menge:
+          type: integer
+        preis:
+          type: integer
+          multipleOf: 0.01
